--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-numpy
 pandas
 seaborn
 matplotlib
@@ -7,6 +6,7 @@ tabulate
 scikit-learn
 Flask==2.2.2
 Werkzeug==2.2.2
-opencv-python==4.5.5.64
+numpy==1.21.6 
+opencv-python==4.5.5.62 
 
 
