--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-pandas
-seaborn
-matplotlib
-colorama
-tabulate
-scikit-learn
-Flask==2.2.2
-Werkzeug==2.2.2
-numpy
-opencv-python==4.5.5.62 
-
-
+Flask==2.3.2
+opencv-python==4.7.0.72
+numpy==1.24.3
